--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 USER=postgres
-HOST=localhost
-DB=modul17
-PW=terserah
-PORT_DB=5432
+HOST=containers-us-west-75.railway.app
+DB=railway
+PW=KJMcWX3xMmBQUeWMj53t
+PORT_DB=5859
 PORT=3001
 SECRET=narindacantik
+DATABASE_URL=postgresql://postgres:KJMcWX3xMmBQUeWMj53t@containers-us-west-75.railway.app:5859/railway
