--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 USER=postgres
-HOST=containers-us-west-75.railway.app
-DB=railway
-PW=KJMcWX3xMmBQUeWMj53t
-PORT_DB=5859
+HOST=localhost
+DB=modul17
+PW=terserah
+PORT_DB=5432
 PORT=3001
 SECRET=narindacantik
-DATABASE_URL=postgresql://postgres:KJMcWX3xMmBQUeWMj53t@containers-us-west-75.railway.app:5859/railway
